samples/_failures_safe/1761394440_1034ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02f86e9d.c: In function ‘main’:
./samples/SAFE/__tmp_02f86e9d.c:186:13: error: expected declaration or statement at end of input
  186 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_02f86e9d.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02f86e9d.c:186:13: error: expected declaration or statement at end of input
